# lab_1MLHomework

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  inference.py  main.py  pyproject.toml  settings.py
config/: .env.test
test/: test_inference_for_examples.py  test_input_not_empty.py  test_invalid_return_json.py  test_model_loading_joblib.py  test_response_is_json.py
